[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/ui/gui_gradient.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/icons_essential_no_outline_full.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/gui_paper.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/winlose.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Foxes.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/font_pixel.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/audio_on.tres" type="Texture" id=7]
[ext_resource path="res://game_script/battle/UI/UIControl.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 228, 68, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 236, 172, 24, 22 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 400, 38, 64, 20 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 40, 37, 606, 140 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 27, 230, 631, 164 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 481, 129, 63, 31 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 384, 291, 96, 26 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 274, 17, 12, 19 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 448, 227, 32, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 268, 47, 20, 22 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 213, 175, 7, 22 )

[node name="UIControl" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.009375
anchor_top = 0.0333333
anchor_right = 0.059375
anchor_bottom = 0.122222
margin_left = 4.0
margin_top = -2.0
margin_right = 4.0
margin_bottom = -2.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PauseButton" type="TextureButton" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = SubResource( 2 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dialog" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
texture = SubResource( 3 )
expand = true

[node name="EndGame" type="Control" parent="Control/Dialog"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="Control/Dialog/EndGame"]
margin_left = 10.0
margin_top = 15.0
margin_right = 190.0
margin_bottom = 72.0
size_flags_vertical = 3
texture = SubResource( 4 )
expand = true
stretch_mode = 5

[node name="Win" type="TextureRect" parent="Control/Dialog/EndGame/Title"]
margin_left = 34.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 38.0
texture = SubResource( 5 )
expand = true

[node name="Lose" type="TextureRect" parent="Control/Dialog/EndGame/Title"]
visible = false
margin_left = 30.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 38.0
texture = SubResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Control/Dialog/EndGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -35.0
margin_right = 69.0
margin_bottom = 58.0
size_flags_vertical = 3
texture = SubResource( 10 )
stretch_mode = 6

[node name="Label" type="Label" parent="Control/Dialog/EndGame/TextureRect"]
margin_left = 5.0
margin_top = 26.0
margin_right = 46.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "EXP:"

[node name="EXPvalue" type="Label" parent="Control/Dialog/EndGame/TextureRect"]
margin_left = 51.0
margin_top = 26.0
margin_right = 130.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )

[node name="PlayRect" type="TextureRect" parent="Control/Dialog/EndGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = 54.0
margin_right = 48.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 50, 0 )
size_flags_horizontal = 6
texture = SubResource( 8 )

[node name="ButtonNext" type="TextureButton" parent="Control/Dialog/EndGame/PlayRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 9 )
expand = true
stretch_mode = 3

[node name="PausedScreen" type="VBoxContainer" parent="Control/Dialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -85.0
margin_right = 78.0
margin_bottom = 88.0

[node name="LblPaused" type="Label" parent="Control/Dialog/PausedScreen"]
margin_right = 156.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
text = "PAUSED"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Control/Dialog/PausedScreen"]
margin_top = 34.0
margin_right = 156.0
margin_bottom = 135.0
size_flags_vertical = 3
texture = SubResource( 10 )
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Dialog/PausedScreen/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.0
margin_bottom = -12.0

[node name="TextureRect" type="TextureRect" parent="Control/Dialog/PausedScreen/TextureRect/HBoxContainer"]
margin_top = 25.0
margin_right = 76.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource( 11 )
stretch_mode = 6

[node name="ButtonAudio" type="TextureButton" parent="Control/Dialog/PausedScreen/TextureRect/HBoxContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 13.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Control/Dialog/PausedScreen/TextureRect/HBoxContainer"]
margin_left = 80.0
margin_top = 25.0
margin_right = 156.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 4
texture = SubResource( 11 )
stretch_mode = 4

[node name="ButtonExit" type="TextureButton" parent="Control/Dialog/PausedScreen/TextureRect/HBoxContainer/TextureRect2"]
anchor_top = -0.2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 5.2
margin_right = -22.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 12 )
expand = true
stretch_mode = 3

[node name="PlayRect" type="TextureRect" parent="Control/Dialog/PausedScreen"]
margin_left = 30.0
margin_top = 139.0
margin_right = 126.0
margin_bottom = 165.0
rect_pivot_offset = Vector2( 50, 0 )
size_flags_horizontal = 6
texture = SubResource( 8 )

[node name="ButtonPlay" type="TextureButton" parent="Control/Dialog/PausedScreen/PlayRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 13 )
expand = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="Control/Dialog/PausedScreen"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 169.0
margin_right = 156.0
margin_bottom = 173.0

[connection signal="pressed" from="TextureRect/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Control/Dialog/EndGame/PlayRect/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Control/Dialog/PausedScreen/TextureRect/HBoxContainer/TextureRect/ButtonAudio" to="." method="_on_ButtonAudio_pressed"]
[connection signal="pressed" from="Control/Dialog/PausedScreen/TextureRect/HBoxContainer/TextureRect2/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="Control/Dialog/PausedScreen/PlayRect/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
